removing touch action on site to stop overscroll on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,8 @@ body {
   overflow: clip;
   width: 100vw;
   height: 100vh;
+
+  touch-action: none;
 }
 
 #startModal {
